kubernetes/wiki/wikijs.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  labels:
    app: wikijs
spec:
  ports:
  - port: 80
    targetPort: wikijs
  selector:
    app: wikijs

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: ghcr.io/linuxserver/wikijs:latest
        ports:
        - containerPort: 3000
          name: wikijs
        volumeMounts:
        - name: wikijs-data
          mountPath: /data
        - name: wikijs-config
          mountPath: /config
      volumes: 
      - name: wikijs-data
        persistentVolumeClaim:
          claimName: wikijs-data-nfs
      - name: wikijs-config
        persistentVolumeClaim:
          claimName: wikijs-config-nfs

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: wikijs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - host: wiki.jahiduls.kube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  wikijs
            port:
              number: 80
